--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,9 @@ body {
   .menu-icons {
     display: none;
   }
+  .menu-btn {
+    display: none;
+  }
 }
 /* Hero section */
 @media screen and (max-width: 1377px) {
@@ -404,10 +407,19 @@ body {
   line-height: 1.5;
   text-align: center;
   color: #ffffff;
+  font-weight: 500;
   background: var(--secondary-text-color);
   cursor: pointer;
   -webkit-transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 574px) {
+  .hero-button {
+    font-size: 16px;
+    border-radius: 5px;
+    width: 289px;
+    height: 60px;
+  }
 }
 @media screen and (min-width: 575px) and (max-width: 767px) {
   .hero-button {
@@ -510,14 +522,35 @@ body {
 .skills-list-item {
   background: var(--background-color);
   border-radius: 10px;
-  padding: 32px 18px;
+}
+@media screen and (min-width: 768px) {
+  .skills-list-item {
+    padding: 5px 14px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-list-item {
+    padding: 32px 18px;
+  }
 }
 
 .heading {
   font-weight: 600;
-  font-size: 48px;
+  font-size: 24px;
+  line-height: 3.33;
   color: var(--heading-color);
   margin-bottom: 60px;
+}
+@media screen and (min-width: 575px) {
+  .heading {
+    font-size: 30px;
+    line-height: 2.67;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .heading {
+    font-size: 48px;
+  }
 }
 
 .skills-heading {
@@ -526,61 +559,193 @@ body {
 
 .list-item-heading {
   font-weight: 600;
-  font-size: 30px;
+  font-size: 18px;
   color: var(--secondary-text-color);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
-
-.list-item-heading--margin {
-  margin-top: 24px;
+@media screen and (min-width: 768px) {
+  .list-item-heading {
+    font-size: 20px;
+    margin-bottom: 15px;
+    margin-top: 14px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .list-item-heading {
+    font-size: 30px;
+    margin-bottom: 20px;
+    margin-top: 24px;
+  }
 }
 
 .skills-description {
-  font-size: 16px;
-  margin-bottom: 30px;
-  width: 359px;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .skills-description {
+    font-size: 12px;
+    margin-bottom: 25px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+@media screen and (min-width: 768px) {
+  .skills-description {
+    font-size: 13px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-description {
+    margin-bottom: 30px;
+    font-size: 16px;
+    width: 359px;
+  }
 }
 
 .skills-description-listening {
-  font-size: 16px;
-  margin-bottom: 30px;
-  width: 324px;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .skills-description-listening {
+    font-size: 12px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+@media screen and (min-width: 768px) {
+  .skills-description-listening {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-description-listening {
+    margin-bottom: 30px;
+    font-size: 16px;
+    width: 324px;
+  }
 }
 
 .skills-description-speaking {
-  font-size: 16px;
-  margin-bottom: 30px;
-  width: 347px;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .skills-description-speaking {
+    font-size: 12px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+@media screen and (min-width: 768px) {
+  .skills-description-speaking {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-description-speaking {
+    margin-bottom: 30px;
+    font-size: 16px;
+    width: 347px;
+  }
 }
 
 .skills-description-speaking-sp {
-  font-size: 16px;
-  margin-bottom: 30px;
-  width: 310px;
+  font-size: 13px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .skills-description-speaking-sp {
+    font-size: 12px;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+@media screen and (min-width: 768px) {
+  .skills-description-speaking-sp {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-description-speaking-sp {
+    margin-bottom: 30px;
+    font-size: 16px;
+    width: 310px;
+  }
 }
 
 .skills-button {
   display: inline-block;
+  padding: 14px 43px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
   color: #ffffff;
   background-color: #263238;
-  border-radius: 10px;
-  padding: 16px 64px;
+  border-radius: 5px;
   -webkit-transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 575px) {
+  .skills-button {
+    padding: 14px 54px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .skills-button {
+    font-size: 16px;
+    padding: 14px 43px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-button {
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 16px 64px;
+  }
 }
 
 .skills-button-secondary {
   display: inline-block;
+  padding: 14px 43px;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   color: #ffffff;
   background-color: #263238;
-  border-radius: 10px;
-  padding: 15px 51px;
+  border-radius: 5px;
   -webkit-transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 800ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 574px) {
+  .skills-button-secondary {
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 575px) {
+  .skills-button-secondary {
+    padding: 14px 54px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .skills-button-secondary {
+    font-size: 16px;
+    padding: 14px 43px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .skills-button-secondary {
+    font-size: 20px;
+    border-radius: 10px;
+    padding: 15px 51px;
+  }
 }
 
 .skills-button:hover,
@@ -592,10 +757,97 @@ body {
   background-color: var(--heading-color);
 }
 
+@media screen and (max-width: 574px) {
+  .skills-list-item {
+    padding: 8px 16px 45px 16px;
+    width: 100%;
+  }
+  .skills-list-item:not(:last-child) {
+    margin-bottom: 21px;
+  }
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .main-skills-list {
+    display: grid;
+    grid-template-columns: repeat(2, 240px);
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
+    row-gap: 34px;
+    grid-auto-rows: 1fr;
+  }
+  .skills-list-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 38px 15px;
+  }
+  .skills-item-listening {
+    position: relative;
+  }
+  .skills-item-listening .skills-button-secondary {
+    position: absolute;
+    width: 210px;
+    bottom: 38px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1377px) {
+  .main-skills-list {
+    display: grid;
+    grid-template-columns: repeat(3, 226px);
+    grid-template-rows: 2fr 1fr;
+    gap: 10px;
+    grid-auto-flow: row;
+  }
+  .speaking-item {
+    grid-row: 1/3;
+    grid-column: 1/2;
+  }
+  .writing-item {
+    grid-row: 1/2;
+    grid-column: 2/3;
+  }
+  .reading-item {
+    grid-row: 1/2;
+    grid-column: 3/4;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .skills-item-listening {
+    grid-row: 2/3;
+    grid-column: 2/4;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: grid;
+    grid-template-columns: 236px 1fr;
+  }
+  .listerning-pic {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .skills-thumb {
+    width: 0.66fr;
+  }
+  .reading-pic {
+    margin-top: 34px;
+    margin-bottom: 31px;
+  }
+}
 @media screen and (min-width: 1378px) {
   .main-skills-list {
     display: grid;
-    grid-template-columns: repeat(3, 426px);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 579px 338px;
     gap: 30px;
   }
@@ -617,16 +869,19 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
   }
   .skills-thumb {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
     width: 324px;
     margin-right: 114px;
+  }
+  .list-item-heading--none {
+    margin-top: 0;
   }
 }
 /* about section */
