add some adaptivity

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ ol {
 
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -51,6 +51,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   min-width: 320px;
+  max-width: 320px;
   padding: 0 15px;
   outline: solid 2px tomato;
 }
@@ -502,7 +503,7 @@ body {
   }
 }
 
-@media screen and (min-width: 575px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .hero-main-cont {
     text-align: center;
   }
@@ -537,19 +538,35 @@ body {
 .heading {
   font-weight: 600;
   font-size: 24px;
-  line-height: 3.33;
+  line-height: 1.5;
   color: var(--heading-color);
-  margin-bottom: 60px;
+  margin-bottom: 56px;
 }
 @media screen and (min-width: 575px) {
   .heading {
     font-size: 30px;
-    line-height: 2.67;
+    margin-bottom: 63px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .heading {
+    margin-bottom: 66px;
   }
 }
 @media screen and (min-width: 1378px) {
   .heading {
-    font-size: 48px;
+    font-size: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1377px) {
+  .heading__about {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .heading__about {
+    margin-bottom: 45px;
   }
 }
 
@@ -798,8 +815,8 @@ body {
 @media screen and (min-width: 768px) and (max-width: 1377px) {
   .main-skills-list {
     display: grid;
-    grid-template-columns: repeat(3, 226px);
-    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 224px 227px 228px;
+    grid-template-rows: 0.68fr 0.32fr;
     gap: 10px;
     grid-auto-flow: row;
   }
@@ -843,6 +860,9 @@ body {
     margin-top: 34px;
     margin-bottom: 31px;
   }
+  .skills-button-secondary {
+    margin-bottom: 15px;
+  }
 }
 @media screen and (min-width: 1378px) {
   .main-skills-list {
@@ -884,45 +904,223 @@ body {
     margin-top: 0;
   }
 }
+@media screen and (max-width: 1377px) {
+  .skills-list-item picture {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .skills-list-item img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 /* about section */
-.about-us-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (max-width: 767px) {
+  .about-us-section {
+    text-align: center;
+  }
 }
 
+@media screen and (min-width: 768px) {
+  .about-us-section {
+    display: grid;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    grid-template-columns: 321px 295px;
+    -webkit-column-gap: 78px;
+       -moz-column-gap: 78px;
+            column-gap: 78px;
+    grid-template-rows: 80px auto auto;
+  }
+  .heading-about {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .about-description {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .results-list {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .about-pic {
+    grid-column: 2/3;
+    grid-row: 1/4;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .about-us-section {
+    display: grid;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    grid-template-columns: 652px 540px;
+    -webkit-column-gap: 146px;
+       -moz-column-gap: 146px;
+            column-gap: 146px;
+    grid-template-rows: 132px auto auto;
+  }
+  .heading-about {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .about-description {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .results-list {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+  .about-pic {
+    grid-column: 2/3;
+    grid-row: 1/4;
+  }
+}
 .about-desc-division {
   margin-right: 146px;
 }
 
-.about-description {
-  line-height: 1.8;
-  width: 652px;
-  padding-bottom: 30px;
+@media screen and (max-width: 574px) {
+  .about-description {
+    line-height: 1.54;
+    width: 100%;
+    max-width: 295px;
+    margin-bottom: 43px;
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .about-description {
+    line-height: 1.5;
+    width: 510px;
+    margin-bottom: 53px;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about-description {
+    line-height: 1.5;
+    width: 321px;
+    margin-bottom: 41px;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .about-description {
+    line-height: 1.8;
+    width: 652px;
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
 }
 
 .about-list-item {
   font-weight: 600;
-  font-size: 48px;
   color: #2a3246;
+  margin-bottom: 5px;
+}
+@media screen and (max-width: 767px) {
+  .about-list-item {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about-list-item {
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .about-list-item {
+    font-size: 48px;
+    margin-bottom: 6px;
+  }
+}
+
+.about__text {
+  font-size: 15px;
+}
+@media screen and (min-width: 575px) {
+  .about__text {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__text {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .about__text {
+    font-size: 20px;
+  }
 }
 
 .results-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: inline-block;
+}
+@media screen and (min-width: 575px) {
+  .results-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+@media screen and (min-width: 575px) {
+  .results-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .results-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .results-item {
   text-align: center;
-  width: 108px;
+}
+@media screen and (max-width: 574px) {
+  .results-item:not(:last-child) {
+    margin-bottom: 52px;
+  }
+}
+@media screen and (min-width: 1378px) {
+  .results-item {
+    width: 108px;
+  }
 }
 
-.results-item:not(:last-child) {
-  margin-right: 131px;
+@media screen and (max-width: 574px) {
+  .about-us-section img {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 23px;
+  }
+}
+@media screen and (min-width: 575px) and (max-width: 767px) {
+  .about-us-section img {
+    margin-bottom: 25px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1378px) {
+  .results-item:not(:last-child) {
+    margin-right: 131px;
+  }
 }
 
 /* Pricing section */
